fix: 修复同时引用打包的css和less时造成的错乱

--- a/packages/components/styles/list2.less
+++ b/packages/components/styles/list2.less
@@ -36,6 +36,9 @@
     }
     > .content {
       flex: 1 1;
+      ul {
+        padding-left: 40px;
+      }
       li {
         color: @text-ordinary;
       }
