--- a/packages/styles/global.less
+++ b/packages/styles/global.less
@@ -3,6 +3,8 @@
 * {
   font-family: Source Sans Pro, Helvetica Neue, Arial, "sans-serif";
   font-weight: 400;
+  padding: 0;
+  margin: 0;
 }
 .dove-page-wrapper {
   p {
